update design and markup, fix title to work on mobile

--- a/client/my-sites/checkout/checkout/style.scss
+++ b/client/my-sites/checkout/checkout/style.scss
@@ -816,8 +816,10 @@
 	float: right;
 }
 .checkout__payment-box-container {
-	span.checkout__payment-box-title {
-		padding: 1em;
+	.checkout__payment-box-title {
+		padding: 20px 16px 14px 16px;
+		font-weight: bold;
+		display: none;
 	}
 
 	div.section-nav {
@@ -826,19 +828,42 @@
 		& .section-nav-tabs__list > span {
 			font-weight: bold;
 		}
+
+		& .section-nav-tab__link {
+			color: $blue-wordpress;
+			font-weight: bold;
+		}
+
+		& .section-nav-tab.is-selected {
+			border-bottom-color: $blue-wordpress;
+		}
 	}
 
 	img {
 		&.checkout__paypal {
 			width: 80px;
-		}
-		&.checkout__credit-card, &.checkout__ideal {
-			width: 35px;
+			margin-top: 4px;
 		}
 		&.checkout__ideal {
+			width: 26px;
 			margin-bottom: 2px;
+			margin-right: 4px;
 		}
+		&.checkout__credit-card {
+			margin-right: 3px;
+			width: 28px;
+			margin-bottom: -2px;
+		}
+
 		padding-left: 1em;
-		vertical-align: middle;
+		vertical-align: bottom;
+	}
+}
+
+@media (min-width: 481px) {
+	.checkout__payment-box-container {
+		.checkout__payment-box-title {
+			display: block;
+		}
 	}
 }
